--- a/experiments/tutorial_rel_trial.ipynb
+++ b/experiments/tutorial_rel_trial.ipynb
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The two cells below are Joey's addition for trying out different num_layers for the GNN"
+    "The two cells below are Joey's addition for trying out different `num_layers` for the GNN."
    ]
   },
   {
